fixed search bar not covering full width

--- a/webUI/theme.css
+++ b/webUI/theme.css
@@ -359,7 +359,7 @@
   right: 0;
   padding: 10px;
   font-size: 16px;
-  width: -moz-available;
+  width: 100%;
   &:focus + .search-results[hasmatches="true"] {
     display: block;
   }
@@ -368,6 +368,7 @@
 #startMining,
 #mineThenCraftPoints {
   display: none;
+  min-width: fit-content;
 }
 
 body.miner #startMining {
